--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 .header-logo-accent {
   color: #2e2f42;
@@ -50,6 +51,10 @@ body {
 }
 .header-item {
   margin-right: 40px;
+}
+
+.header-item-contact {
+  margin-right: 0;
 }
 
 .header-link:hover {
