--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
 
 .header-item-contact {
   margin-right: 0;
+  margin-right: 40px;
 }
 
 .header-link:hover {
@@ -112,6 +113,8 @@ img {
 }
 .hero {
   background: #2e2f42;
+  background-color: red;
+  padding: 188px 0;
 }
 .hero-title {
   color: #fff;
@@ -120,16 +123,23 @@ img {
   line-height: 1.07;
   letter-spacing: 1.12px;
   text-align: center;
+  width: 496px;
 }
 
 .hero-button {
-  background: #4d5ae5;
+  /* background: #4d5ae5; */
   color: #ffffff;
+  background-color: #4d5ae5;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.64px;
   cursor: pointer;
+  display: block;
+  width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
 }
 .hero-button-text {
   color: #ffffff;
