--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
 }
 
 .contacts-item-tel {
-  margin-right: 0;
+  /* margin-right: 0; */
 }
 
 .contacts-link {
@@ -123,7 +123,7 @@ img {
   line-height: 1.07;
   letter-spacing: 1.12px;
   text-align: center;
-  width: 496px;
+  max-width: 496px;
 }
 
 .hero-button {
@@ -136,7 +136,7 @@ img {
   letter-spacing: 0.64px;
   cursor: pointer;
   display: block;
-  width: 169px;
+  max-width: 169px;
   height: 56px;
   border: none;
   border-radius: 4px;
