--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ body {
   /* margin-right: 40px; */
 }
 
-.header-item-contact {
+/* .header-item-contact {
   margin-right: 0;
   margin-right: 40px;
-}
+} */
 
 .header-link:hover {
   color: #404bbf;
