--- a/style.css
+++ b/style.css
@@ -161,15 +161,24 @@ img {
 
 .visually-hidden {
   position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
   clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  overflow: hidden;
 }
+
 .features-title {
 }
 .features-list {
   display: flex;
+  gap: 24px;
 }
 .features-item {
-  gap: 24px;
   width: calc((100% - 72px) / 4);
 }
 .features-subtitle {
