--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ img {
 /* Our team */
 .team-section {
   background: #f4f4fd;
+  padding: 120px 0;
 }
 .team-list {
 }
@@ -233,6 +234,7 @@ img {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
+  margin-bottom: 72px;
 }
 .team-photo {
 }
