--- a/style.css
+++ b/style.css
@@ -272,7 +272,8 @@ img {
 
 /* Portfolio section 4 */
 .portfolio {
-  padding-top: 120px 0 120px 0;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio-titel {
@@ -295,6 +296,8 @@ img {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+}
+.item-accent {
 }
 .portfolio-photo {
 }
