--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-* {
-}
+/* * {
+} */
 
 body {
   background-color: #ffffff;
@@ -327,6 +327,7 @@ img {
 /* Footer */
 .footer-sect {
   background: #2e2f42;
+  padding: 100px 0;
 }
 .footer-link {
   font-family: "Raleway", sans-serif;
@@ -337,6 +338,8 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo-accent {
@@ -349,4 +352,5 @@ img {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  max-width: 264px;
 }
