--- a/style.css
+++ b/style.css
@@ -11,19 +11,36 @@ body {
   line-height: 2;
 }
 
+/* Default */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 /* Header section */
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
 
 .container {
-  display: flex;
-}
-
-.header-container {
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.header-container {
+  display: flex;
 }
 
 .header-nav {
