--- a/style.css
+++ b/style.css
@@ -28,9 +28,18 @@ ul {
   list-style-type: none;
 }
 
+.footer-link,
+.header-container,
+.header-logo-link,
+.header-link,
+.contacts-link {
+  text-decoration: none;
+}
+
 /* Header section */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  padding: 24px 0;
 }
 
 .container {
@@ -41,11 +50,13 @@ ul {
 
 .header-container {
   display: flex;
+  /* text-decoration: none; */
 }
 
 .header-nav {
   display: flex;
   align-items: center;
+  margin-right: auto;
 }
 
 .header-logo-link {
@@ -57,6 +68,7 @@ ul {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   margin-right: 76px;
+  /* text-decoration: none; */
 }
 .header-logo-accent {
   color: #2e2f42;
@@ -92,6 +104,7 @@ ul {
   letter-spacing: 0.32px;
   padding: 24px 0;
   margin-right: 0;
+  /* text-decoration: none; */
 }
 
 /* Contact section */
@@ -117,6 +130,7 @@ ul {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  /* text-decoration: none; */
 }
 .contacts-link:hover {
   color: #404bbf;
@@ -132,8 +146,7 @@ img {
   display: block;
 }
 .hero {
-  background: #2e2f42;
-  background-color: red;
+  background-color: #2e2f42;
   padding: 188px 0;
 }
 .hero-title {
@@ -144,6 +157,8 @@ img {
   letter-spacing: 1.12px;
   text-align: center;
   max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 
 .hero-button {
@@ -294,8 +309,9 @@ img {
 }
 
 .portfolio-titel {
+  font-family: Roboto;
+  font-size: 36px;
   color: #2e2f42;
-  font-size: 20px;
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -330,7 +346,6 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
   margin-bottom: 8px;
 }
 .portfolio-text {
@@ -357,6 +372,7 @@ img {
   text-transform: uppercase;
   display: inline-block;
   margin-bottom: 16px;
+  /* text-decoration: none; */
 }
 
 .footer-logo-accent {
